Fixes issue with stackable grid row spacing, adds padding to vertically divided stackable grid #1161

--- a/src/definitions/collections/grid.less
+++ b/src/definitions/collections/grid.less
@@ -1066,9 +1066,14 @@
 @media only screen and (max-width: @largestMobileScreen) {
   .ui.stackable.grid {
     display: block !important;
-    width: 100%;
+    width: auto;
     padding: 0em;
-    margin: 0em !important;
+    margin-top: 0em;
+    margin-bottom: 0em;
+  }
+  body > .ui.stackable.grid {
+    margin-left: 0em !important;
+    margin-right: 0em !important;
   }
   .ui.stackable.grid > .row > .wide.column,
   .ui.stackable.grid > .wide.column,
@@ -1079,8 +1084,8 @@
     display: block !important;
     width: auto !important;
 
-    margin: (@stackableRowSpacing / 2) 0em 0em !important;
-    padding: (@stackableRowSpacing / 2) (@stackableGutter / 2) 0em !important;
+    margin: (@stackableRowSpacing / 4) 0em !important;
+    padding: (@stackableRowSpacing / 4) (@stackableGutter / 2) 0em !important;
 
     box-shadow: none !important;
   }
